--- a/sub_page/menu.html
+++ b/sub_page/menu.html
@@ -21,12 +21,19 @@ if(!$m){$m=1;}
 <link href="../js/jquery.bxslider.css" rel="stylesheet" />
 <script src="../js/common.js" charset="utf-8"></script>
 <script src="../js/main.js" charset="utf-8"></script>
+<script type="text/javascript">
+	$(document).ready(function(){
+		var mHeight = $('.menuList ul li.on').height();
+		$('.menuList').css({height:mHeight});
+	})
+</script>
 <title>Document</title>
 <style>
 
 </style>
 
 </head>
+
 <body>
 	<div class="skip_nav">
 		<a href="#content_area">본문 바로가기</a>
