--- a/sub_page/menuDetail.html
+++ b/sub_page/menuDetail.html
@@ -1,3 +1,10 @@
+<?
+	session_start();
+	@extract($_GET);
+	@extract($_POST);
+	@extract($_SESSION);
+?>
+
 <!doctype html>
 <html lang="ko">
 <head>
